--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@
 src/mcp-server/node_modules/
 src/mcp-server/build/
 
-# Runtime artifacts (contain PII)
+# Runtime artifacts
+build/
+swarm_status.json
 quota_snapshot.json
+swarm-agent-*.json
