test: G10 integration tests + G11 settings investigation
G10 — Integration Tests:
- Added vitest dependency and npm test script
- manifest.test.ts: 12 tests (parse, serialize, replace, edge cases, double-newline regression)
- agent-progress.test.ts: 9 tests (CRUD, Unicode IDs, readAll, malformed files)
- All 21 tests pass

G11 — Settings Key Investigation:
- Found autoRun/autoApprove/allowInBackground in minified extension JS
- Exact dotted key names unverifiable from binary
- Updated model_fallback.json notes

--- a/src/mcp-server/package.json
+++ b/src/mcp-server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^25.3.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
